--- a/roadmap/v0.10-agent-sdk/p2.2-provider-profiles-llm-contract.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-provider-profiles-llm-contract.md
@@ -80,7 +80,9 @@ With profile-first run-scoped configuration, nesting keeps contracts clearer:
 - top-level in `LlmGenerateParams@1`:
   - identity and determinism-critical routing/audit fields (`provider_profile_id`, `provider`, `model`, `message_refs`, `api_key`)
 - nested `runtime`:
-  - step-local execution payload (`temperature`, optional `max_tokens`, `reasoning_effort`, tool/stop/options/format refs)
+  - execution payload that combines:
+    - run-pinned optional controls (`max_tokens`, `reasoning_effort`) copied from immutable `active_run_config`
+    - step-local fields (`temperature`, tool/stop/options/format refs) derived deterministically by reducer/plan logic
 
 This keeps run-scoped configuration separate from step-scoped execution data.
 P2.2 does not define host/user step-level configuration overrides.
@@ -174,9 +176,9 @@ Notes:
 
 - Keep `provider` and `model` explicit in params for cap enforcement, policy evaluation, and audit.
 - `provider_profile_id` ties the request to a profile-defined default/constraints bundle.
-- `runtime` groups step-local execution fields cleanly and avoids endless top-level field growth.
+- `runtime` groups execution fields cleanly and avoids endless top-level field growth.
 - `provider`, `model`, and `provider_profile_id` are sourced from immutable active run config.
-- `runtime.max_tokens` is sourced from active run config when set; when unset, adapter passes no max-token override and provider defaults apply.
+- Optional tuning controls (`runtime.reasoning_effort`, `runtime.max_tokens`) are sourced from active run config when set; when unset, adapter leaves them unset so provider defaults apply.
 
 ### LLM Receipt (replaced `@1`)
 
@@ -305,9 +307,11 @@ Equivalent flow for Anthropic maps to `provider_options.anthropic.*` and Message
 
 ## Profile Resolution Semantics
 
-1. At run start, compute effective run request config from `RunRequested.run_overrides` when present, otherwise `session_config` defaults (P2.1).
-2. Profile resolver loads `ProviderProfile@1` using effective `provider_profile_id`; catalog lookup may validate compatibility and produce diagnostics only.
-3. Resolver computes concrete `provider` and `model` and applies run-scoped defaults for `reasoning_effort` and `max_tokens`.
+1. At run start, select run request config as:
+   - `RunRequested.run_overrides` when present (full replacement), otherwise
+   - `session_config` defaults (P2.1).
+2. Profile resolver loads `ProviderProfile@1` using selected `provider_profile_id`; catalog lookup may validate compatibility and produce diagnostics only.
+3. Resolver computes concrete `provider` and `model`. Optional run controls (`reasoning_effort`, `max_tokens`) come from selected run request config, with profile defaults applied only where explicitly defined by the profile contract.
 4. Reducer snapshots immutable `active_run_config` (P2.1) containing `{provider_profile_id, provider, model, reasoning_effort?, max_tokens?}`.
 5. For each LLM step, `LlmGenerateParams@1` is materialized from `active_run_config` plus deterministic step context (`message_refs`, tools, stop sequences, metadata, format refs).
 6. No host/user step-level config override path exists in P2.2.
@@ -315,22 +319,22 @@ Equivalent flow for Anthropic maps to `provider_options.anthropic.*` and Message
 8. Adapter receives concrete fully-resolved request values.
 9. If required values remain unset after precedence resolution, resolver fails with typed validation error.
 
-Run-start precedence order:
+Run-start resolution order:
 
-1. `RunRequested.run_overrides` (run-scoped).
-2. `session_config` defaults.
-3. `ProviderProfile@1` defaults.
-4. No semantic defaults from host catalog/runtime.
+1. Select run request config source:
+   - `RunRequested.run_overrides` when present (full replacement), else `session_config`.
+2. Resolve through `ProviderProfile@1` defaults/constraints.
+3. No semantic defaults from host catalog/runtime.
 
 Step materialization rule:
 
 - Config-bearing fields (`provider_profile_id`, `provider`, `model`, `runtime.reasoning_effort`, `runtime.max_tokens`) must come from immutable `active_run_config`.
 - Step-local runtime fields may vary only from deterministic reducer/plan logic for that step.
 
-`max_tokens` rule:
+Optional tuning controls rule:
 
-- If `active_run_config.max_tokens` is set, materialize it into `runtime.max_tokens`.
-- If `active_run_config.max_tokens` is unset, keep `runtime.max_tokens` unset and use provider/model default behavior.
+- If `active_run_config.reasoning_effort` is set, materialize it into `runtime.reasoning_effort`; if unset, keep `runtime.reasoning_effort` unset so provider defaults apply.
+- If `active_run_config.max_tokens` is set, materialize it into `runtime.max_tokens`; if unset, keep `runtime.max_tokens` unset so provider defaults apply.
 - Cap enforcer and policy logic must treat missing `max_tokens` as valid input.
 
 Only resolved values in `LlmGenerateParams@1` are authoritative for deterministic policy/cap and audit.
@@ -374,7 +378,7 @@ Provider-specific behavior belongs in profile and adapter layers; reducer-facing
 ## Exit Criteria
 
 1. OpenAI and Anthropic profiles pass the same core contract tests for no-tool and tool-call flows.
-2. Profile resolution (run-scoped overrides + session defaults + profile defaults + catalog validation diagnostics) works without app-level provider branching.
+2. Profile resolution (run-scoped full replacement when provided, otherwise session defaults, then profile defaults/constraints + catalog validation diagnostics) works without app-level provider branching.
 3. `provider_options_ref` round-trip is verified from effect params to provider request.
 4. `output_ref` normalized envelope and `raw_output_ref` provider payload are both populated where available.
 5. `max_tokens` omitted path is covered and succeeds for supported models/providers.
