--- a/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
+++ b/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
@@ -413,15 +413,21 @@ Model/provider can change within a session, but only at run boundaries:
 
 1. Session stores mutable defaults in `session_config`.
 2. `RunRequested.run_overrides` may replace those defaults for the next run.
-3. On `RunStarted`, reducer resolves and snapshots `active_run_config`.
+3. On `RunStarted`, reducer snapshots `active_run_config` only after successful profile lookup resolution (see P2.2 dedicated profile-catalog flow).
 4. `active_run_config.provider` and `active_run_config.model` are immutable until run terminal state.
 5. Next run may use different resolved model/provider.
 
 Profile-first constraint:
 
 - Session and run request configuration choose `provider_profile_id`; they do not directly set provider/model.
-- Provider/model are resolved once at `RunStarted` and persisted only in `active_run_config`.
+- Provider/model are resolved once at run start via typed profile lookup events and persisted only in `active_run_config`.
 - `RunRequested.run_overrides` is a full run-scoped config value, not a sparse patch.
+
+Run-start extension boundary:
+
+- P2.2 adds profile lookup request/result events between `RunRequested` and `RunStarted`.
+- P2.1 lifecycle semantics remain unchanged: once `RunStarted` is emitted, active run config is immutable for that run.
+- If profile lookup fails, run transitions to failure path without activating an immutable run config.
 
 ## Deterministic Parallel Tool Batch Contract
 
