--- a/roadmap/v0.10-agent-sdk/p2.2-provider-profiles-llm-contract.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-provider-profiles-llm-contract.md
@@ -47,7 +47,7 @@ Determinism boundary:
 
 1. Catalog lookup may validate compatibility and produce diagnostics only.
 2. Catalog lookup may not inject or mutate cap/policy-relevant values.
-3. If required resolved values are missing after applying run-scoped config and profile defaults, resolver must fail with typed validation error rather than infer host-side defaults.
+3. If required resolved values are missing after applying run-scoped config and profile defaults, run start must fail with typed validation error rather than infer host-side defaults.
 
 ## What This Stage Locks
 
@@ -55,6 +55,10 @@ Determinism boundary:
 2. In-place replacement of `sys/LlmGenerateParams@1` and `sys/LlmGenerateReceipt@1`.
 3. Normalized output envelope contract for `output_ref`.
 4. Host adapter wiring from typed effect params into `aos-llm::Request`.
+5. Profile lookup architecture using AOS primitives only:
+   - dedicated `aos.agent/ProfileCatalogReducer@1`,
+   - event-driven lookup between session run request and run start,
+   - no standalone host-side "resolver service".
 
 ## Scope
 
@@ -72,6 +76,10 @@ Determinism boundary:
 4. Keep normalized + raw output model:
    - `output_ref` for reducer-facing normalized envelope
    - `raw_output_ref` for provider-native audit/debug
+5. Define profile lookup/reconciliation flow with AOS primitives:
+   - session reducer emits lookup request event with selected `provider_profile_id`,
+   - profile catalog reducer returns resolved profile event (or typed failure),
+   - session reducer snapshots immutable `active_run_config` only after successful lookup.
 
 ## Why Nested `runtime` in `LlmGenerateParams@1`
 
@@ -120,7 +128,7 @@ Any step-local variation must come from deterministic reducer/plan logic and cur
 
 This profile is intentionally thin.
 
-- Provider capability flags (streaming/tool parallel/etc.) come from catalog/runtime resolver logic, not duplicated in AIR.
+- Provider capability flags (streaming/tool parallel/etc.) come from catalog/runtime metadata logic, not duplicated in AIR.
 - `catalog_model_id` is optional linkage for host-side validation and UI hints.
 - `provider`, `default_model`, and caps-relevant constraints remain explicit in AIR.
 
@@ -305,25 +313,45 @@ Expected mapping example (OpenAI Responses):
 
 Equivalent flow for Anthropic maps to `provider_options.anthropic.*` and Messages-specific semantics under same receipt contract.
 
-## Profile Resolution Semantics
+## AOS Primitive Architecture (No Standalone Resolver)
+
+P2.2 adopts an event-driven architecture using reducers/plans/effects only:
+
+1. `aos.agent/SessionReducer@1` remains keyed by `session_id` and owns `session_config` and `active_run_config`.
+2. `aos.agent/ProfileCatalogReducer@1` is introduced as a dedicated world-level catalog authority for `ProviderProfile@1` entries.
+3. Profile lookup is done by typed DomainEvents between these reducers, not by direct host callbacks.
+4. Plans remain orchestration-only and materialize `llm.generate` params from immutable `active_run_config`.
+5. Host adapter consumes fully resolved params and must not inject semantic defaults.
+
+Seed/update model:
+
+1. Profiles are seeded via SDK AIR assets and/or explicit profile-catalog events.
+2. Optional workspace/catalog inspection can exist in plans, but authoritative profile values used for run config must flow through `ProfileCatalogReducer` and typed events.
+3. Replay must reproduce identical profile lookup outcomes from journaled events and reducer state.
+
+## Profile Lookup and Run-Start Resolution Semantics
 
 1. At run start, select run request config as:
    - `RunRequested.run_overrides` when present (full replacement), otherwise
    - `session_config` defaults (P2.1).
-2. Profile resolver loads `ProviderProfile@1` using selected `provider_profile_id`; catalog lookup may validate compatibility and produce diagnostics only.
-3. Resolver computes concrete `provider` and `model`. Optional run controls (`reasoning_effort`, `max_tokens`) come from selected run request config, with profile defaults applied only where explicitly defined by the profile contract.
-4. Reducer snapshots immutable `active_run_config` (P2.1) containing `{provider_profile_id, provider, model, reasoning_effort?, max_tokens?}`.
-5. For each LLM step, `LlmGenerateParams@1` is materialized from `active_run_config` plus deterministic step context (`message_refs`, tools, stop sequences, metadata, format refs).
-6. No host/user step-level config override path exists in P2.2.
-7. Capability checks still apply at effect boundary (`llm.basic` cap and policy).
-8. Adapter receives concrete fully-resolved request values.
-9. If required values remain unset after precedence resolution, resolver fails with typed validation error.
+2. Session reducer emits `aos.agent/ProfileLookupRequested@1` with selected `provider_profile_id`, `run_id`, and fence fields.
+3. Profile catalog reducer handles lookup for `ProviderProfile@1`; catalog model metadata may validate compatibility and produce diagnostics only.
+4. Profile catalog reducer emits either:
+   - `aos.agent/ProfileLookupResolved@1` with concrete `provider`, `model`, and resolved optional controls, or
+   - `aos.agent/ProfileLookupFailed@1` with typed failure reason.
+5. On `ProfileLookupResolved@1`, session reducer snapshots immutable `active_run_config` (P2.1) containing `{provider_profile_id, provider, model, reasoning_effort?, max_tokens?}` and then emits/enters `RunStarted`.
+6. On `ProfileLookupFailed@1`, session reducer transitions run to failure path with typed error; no `RunStarted` for that run.
+7. For each LLM step, `LlmGenerateParams@1` is materialized from `active_run_config` plus deterministic step context (`message_refs`, tools, stop sequences, metadata, format refs).
+8. No host/user step-level config override path exists in P2.2.
+9. Capability checks still apply at effect boundary (`llm.basic` cap and policy).
+10. Adapter receives concrete fully-resolved request values.
+11. If required values remain unset after precedence resolution, run start fails with typed validation error.
 
 Run-start resolution order:
 
 1. Select run request config source:
    - `RunRequested.run_overrides` when present (full replacement), else `session_config`.
-2. Resolve through `ProviderProfile@1` defaults/constraints.
+2. Resolve through `ProviderProfile@1` defaults/constraints via `ProfileCatalogReducer`.
 3. No semantic defaults from host catalog/runtime.
 
 Step materialization rule:
@@ -370,16 +398,17 @@ Provider-specific behavior belongs in profile and adapter layers; reducer-facing
 
 ## Deliverables
 
-1. Profile schemas and resolver helpers in `aos-agent-sdk`.
+1. Profile schemas and profile-catalog reducer helpers in `aos-agent-sdk`.
 2. Updated built-in schema set replacing `LlmGenerateParams@1` and `LlmGenerateReceipt@1`.
 3. `aos-host` LLM adapter updates to consume/pass expanded fields into `aos-llm`.
-4. Manifest/cap/policy updates aligned to the in-place schema replacement.
+4. Manifest/cap/policy updates aligned to the in-place schema replacement, including routing for profile lookup request/result events.
 
 ## Exit Criteria
 
 1. OpenAI and Anthropic profiles pass the same core contract tests for no-tool and tool-call flows.
-2. Profile resolution (run-scoped full replacement when provided, otherwise session defaults, then profile defaults/constraints + catalog validation diagnostics) works without app-level provider branching.
+2. Profile lookup via dedicated profile-catalog reducer (run-scoped full replacement when provided, otherwise session defaults, then profile defaults/constraints + catalog validation diagnostics) works without app-level provider branching.
 3. `provider_options_ref` round-trip is verified from effect params to provider request.
 4. `output_ref` normalized envelope and `raw_output_ref` provider payload are both populated where available.
 5. `max_tokens` omitted path is covered and succeeds for supported models/providers.
 6. Replay parity preserved (no nondeterministic fields leak into reducer decisions).
+7. Unknown `provider_profile_id` path produces deterministic `ProfileLookupFailed@1` and run failure with no partial run activation.
