--- a/roadmap/v0.10-agent-sdk/p2.6-conformance-and-demiurge-migration.md
+++ b/roadmap/v0.10-agent-sdk/p2.6-conformance-and-demiurge-migration.md
@@ -23,7 +23,9 @@ This stage resolves concerns #8 and #9.
      - cancellation,
      - policy/cap denial,
      - adapter timeout/error,
-     - parent/child session lifecycle.
+     - parent/child session lifecycle,
+     - unknown provider profile id,
+     - profile change across runs with no in-run drift.
 2. Add replay-oriented end-to-end assertions:
    - journal replay from genesis,
    - byte-identical terminal state snapshots.
@@ -54,6 +56,7 @@ This stage resolves concerns #8 and #9.
 - Keep replay-or-die as non-negotiable acceptance criterion.
 - Deterministic lane is required for CI gating and uses reproducible adapters/fixtures.
 - Live-provider lane is opt-in and validates real-provider interop, but is not used for replay-parity gating.
+- Include profile-catalog reducer fixtures proving event-driven lookup (`ProfileLookupRequested -> ProfileLookupResolved|Failed`) before `RunStarted`.
 
 ## Exit Criteria
 
@@ -63,3 +66,5 @@ This stage resolves concerns #8 and #9.
 4. All prior stage exit criteria remain green after migration.
 5. P2 marked complete only after closure report is published.
 6. `aos-smoke` deterministic lane is green in CI; live-provider lane is available and documented as opt-in.
+7. Unknown `provider_profile_id` deterministically fails run start through typed lookup-failure path (no partial run activation).
+8. Profile updates only affect subsequent runs; active runs keep immutable `active_run_config` values through completion/cancel.
