--- a/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
+++ b/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
@@ -4,6 +4,35 @@
 **Status**: Proposed  
 **Depends on**: P1 complete
 
+## Implementation Progress (2026-02-13)
+
+Completed scaffold work:
+
+1. Added new SDK crate and workspace wiring:
+   - `crates/aos-agent-sdk`
+   - root `Cargo.toml` member entry
+2. Added P2.1 contract schema assets:
+   - `crates/aos-agent-sdk/air/schemas.air.json`
+   - includes all listed P2.1 `aos.agent/*` core schemas.
+3. Added SDK module and manifest assets:
+   - `crates/aos-agent-sdk/air/module.air.json`
+   - `crates/aos-agent-sdk/air/manifest.air.json`
+4. Added Rust contract types and helper scaffolding:
+   - `crates/aos-agent-sdk/src/contracts/*`
+   - `crates/aos-agent-sdk/src/helpers/*`
+5. Added isolated WASM module bins (pattern aligned to `crates/aos-sys`):
+   - `crates/aos-agent-sdk/src/bin/session_reducer.rs`
+   - `crates/aos-agent-sdk/src/bin/session_event_echo.rs`
+6. Build status:
+   - `cargo check -p aos-agent-sdk` passes.
+
+Remaining for full P2.1 completion:
+
+1. Implement full lifecycle/control business logic (not just scaffold transitions/helpers).
+2. Implement deterministic stale receipt handling and epoch fence behavior end-to-end.
+3. Implement active tool-batch settle semantics with deterministic result ordering.
+4. Add P2.1 smoke fixtures and replay-parity assertions in `crates/aos-smoke`.
+
 ## Purpose
 
 Establish the base session lifecycle and host-control contract so every agent app shares the same run semantics.
