--- a/roadmap/v0.10-agent-sdk/p2.2-provider-profiles-llm-contract.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-provider-profiles-llm-contract.md
@@ -4,6 +4,42 @@
 **Status**: Proposed  
 **Depends on**: P2.1
 
+## Implementation Progress (2026-02-13)
+
+Completed scaffold work:
+
+1. Added P2.2 contract schemas in SDK AIR assets:
+   - `aos.agent/ProviderProfile@1`
+   - `sys/LlmRuntimeArgs@1`
+   - replaced shapes for `sys/LlmGenerateParams@1` and `sys/LlmGenerateReceipt@1`
+   - `aos.agent/LlmToolCall@1`
+   - `aos.agent/LlmToolCallList@1`
+   - `aos.agent/LlmOutputEnvelope@1`
+   - profile lookup contracts:
+     - `aos.agent/ProfileLookupRequested@1`
+     - `aos.agent/ProfileLookupResolved@1`
+     - `aos.agent/ProfileLookupFailure@1`
+     - `aos.agent/ProfileLookupFailed@1`
+     - `aos.agent/ProfileCatalogState@1`
+     - `aos.agent/ProfileCatalogEvent@1`
+2. Added Rust contract scaffolding:
+   - `crates/aos-agent-sdk/src/contracts/profile.rs`
+   - `crates/aos-agent-sdk/src/contracts/llm.rs`
+   - wired into `crates/aos-agent-sdk/src/contracts/mod.rs`
+3. Added profile catalog reducer module scaffold:
+   - `crates/aos-agent-sdk/src/bin/profile_catalog_reducer.rs`
+   - module def in `crates/aos-agent-sdk/air/module.air.json`
+   - manifest wiring in `crates/aos-agent-sdk/air/manifest.air.json`
+4. Build status:
+   - `cargo check -p aos-agent-sdk` passes.
+
+Remaining for full P2.2 completion:
+
+1. Implement profile lookup request/resolution/failure runtime flow between session and catalog reducers.
+2. Update `aos-host` LLM adapter to fully consume/pass expanded `sys/LlmGenerateParams@1` fields into `aos-llm`.
+3. Implement normalized `output_ref` envelope generation and `raw_output_ref` parity behavior in adapter tests.
+4. Add deterministic integration coverage (OpenAI/Anthropic profile paths, unknown profile failure path, replay parity checks).
+
 ## Purpose
 
 Standardize provider strategy and align LLM effect contracts with agent runtime controls.
