--- a/roadmap/v0.10-agent-sdk/p2.2-llm-boundary-issue.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-llm-boundary-issue.md
@@ -1,7 +1,7 @@
 # P2.2 LLM Boundary Issue: `sys/*` vs `aos.agent/*`
 
 **Date**: 2026-02-13  
-**Status**: Open design issue (documented for handoff)
+**Status**: Accepted; roadmap rebaseline applied on 2026-02-13
 
 ## Summary
 
@@ -107,10 +107,9 @@ not as "define/replace `sys/*` contracts inside `aos-agent-sdk` assets".
 ## Resume checklist
 
 1. Clean SDK AIR assets to remove `sys/Llm*` ownership.
-2. Add an explicit section to `p2.2-provider-profiles-llm-contract.md` clarifying ownership boundary.
-3. Implement core-side `sys/Llm*` evolution (if still desired) in `spec/defs` + runtime crates.
-4. Implement SDK mapper and reducer event flow on top.
-5. Add integration tests proving:
+2. Implement core-side `sys/Llm*` evolution in `spec/defs` + runtime crates.
+3. Implement SDK mapper and reducer event flow on top.
+4. Add integration tests proving:
    - agent layer remains provider-profile aware,
    - core adapter remains agent-agnostic,
    - replay determinism preserved.
