--- a/roadmap/v0.10-agent-sdk/p2.2-provider-profiles-llm-contract.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-provider-profiles-llm-contract.md
@@ -8,10 +8,8 @@
 
 Completed scaffold work:
 
-1. Added P2.2 contract schemas in SDK AIR assets:
+1. Added P2.2 agent contract scaffolding in SDK AIR assets:
    - `aos.agent/ProviderProfile@1`
-   - `sys/LlmRuntimeArgs@1`
-   - replaced shapes for `sys/LlmGenerateParams@1` and `sys/LlmGenerateReceipt@1`
    - `aos.agent/LlmToolCall@1`
    - `aos.agent/LlmToolCallList@1`
    - `aos.agent/LlmOutputEnvelope@1`
@@ -35,10 +33,35 @@ Completed scaffold work:
 
 Remaining for full P2.2 completion:
 
-1. Implement profile lookup request/resolution/failure runtime flow between session and catalog reducers.
-2. Update `aos-host` LLM adapter to fully consume/pass expanded `sys/LlmGenerateParams@1` fields into `aos-llm`.
-3. Implement normalized `output_ref` envelope generation and `raw_output_ref` parity behavior in adapter tests.
-4. Add deterministic integration coverage (OpenAI/Anthropic profile paths, unknown profile failure path, replay parity checks).
+1. Rebaseline contract ownership after boundary issue:
+   - remove SDK-local `sys/Llm*` schema ownership from `crates/aos-agent-sdk/air/*`,
+   - keep SDK AIR assets scoped to `aos.agent/*`.
+2. Implement core-side `sys/Llm*` contract evolution in:
+   - `spec/defs`,
+   - `aos-effects`,
+   - `aos-host`,
+   - `aos-sys`/kernel cap enforcers and tests.
+3. Implement deterministic mapper flow from SDK run/step state to core `sys/LlmGenerateParams@1`.
+4. Implement profile lookup request/resolution/failure runtime flow between session and catalog reducers.
+5. Add deterministic integration coverage (OpenAI/Anthropic profile paths, unknown profile failure path, replay parity checks).
+
+> Note: The previous scaffold that placed `sys/Llm*` shapes under SDK AIR assets is treated as a temporary draft artifact and not the authoritative architecture direction.
+
+## Ownership Boundary (Authoritative)
+
+1. Core owns `sys/*`:
+   - built-in schemas/effects/caps under `spec/defs/*`,
+   - Rust low-level effect/receipt types under `aos-effects`,
+   - adapter execution under `aos-host`,
+   - cap enforcer decoding/constraints under `aos-sys` and kernel fallbacks.
+2. SDK owns `aos.agent/*`:
+   - profile/session/run/turn/step contracts,
+   - profile lookup choreography,
+   - mapper helpers producing core effect params,
+   - reducer-facing typed envelopes/events.
+3. Rule:
+   - SDK AIR assets must not define or replace `sys/*` schemas.
+   - `sys/*` schemas must not depend on `aos.agent/*` references.
 
 ## Purpose
 
@@ -48,7 +71,7 @@ This stage resolves concerns #2 (provider philosophy) and #7 (LLM contract press
 
 Because v0.10 accepts breaking changes, this stage replaces `sys/LlmGenerateParams@1` and `sys/LlmGenerateReceipt@1` in place instead of introducing parallel `@2` schemas.
 
-This document is the normative source of truth for P2.2 provider/LLM contracts.
+This document is the normative source of truth for P2.2 provider/LLM contracts and boundary ownership.
 
 ## Why Provider Profiles Exist
 
@@ -88,7 +111,7 @@ Determinism boundary:
 ## What This Stage Locks
 
 1. `aos.agent/ProviderProfile@1` schema and semantics.
-2. In-place replacement of `sys/LlmGenerateParams@1` and `sys/LlmGenerateReceipt@1`.
+2. Core-owned in-place replacement/evolution of `sys/LlmGenerateParams@1` and `sys/LlmGenerateReceipt@1`.
 3. Normalized output envelope contract for `output_ref`.
 4. Host adapter wiring from typed effect params into `aos-llm::Request`.
 5. Profile lookup architecture using AOS primitives only:
@@ -103,7 +126,7 @@ Determinism boundary:
    - thin world-pinned defaults (`provider`, `model`, default refs)
    - optional policy-level constraints (`allowed_models`, local max token cap)
    - catalog linkage via model id hints
-2. Evolve LLM effect schemas:
+2. Evolve LLM effect schemas in core (not SDK):
    - replace `sys/LlmGenerateParams@1` in place
    - replace `sys/LlmGenerateReceipt@1` in place
 3. Thread profile/runtime controls through host adapter:
@@ -168,7 +191,7 @@ This profile is intentionally thin.
 - `catalog_model_id` is optional linkage for host-side validation and UI hints.
 - `provider`, `default_model`, and caps-relevant constraints remain explicit in AIR.
 
-### LLM Runtime Args (new helper schema)
+### LLM Runtime Args (core helper schema)
 
 ```json
 {
@@ -180,7 +203,7 @@ This profile is intentionally thin.
       "max_tokens": { "option": { "nat": {} } },
       "tool_refs": { "option": { "list": { "hash": {} } } },
       "tool_choice": { "option": { "ref": "sys/LlmToolChoice@1" } },
-      "reasoning_effort": { "option": { "ref": "aos.agent/ReasoningEffort@1" } },
+      "reasoning_effort": { "option": { "text": {} } },
       "stop_sequences": { "option": { "list": { "text": {} } } },
       "metadata": {
         "option": {
@@ -205,7 +228,7 @@ This profile is intentionally thin.
   "name": "sys/LlmGenerateParams@1",
   "type": {
     "record": {
-      "provider_profile_id": { "ref": "aos.agent/ProviderProfileId@1" },
+      "provider_profile_id": { "option": { "text": {} } },
       "provider": { "text": {} },
       "model": { "text": {} },
       "message_refs": { "list": { "hash": {} } },
@@ -219,9 +242,10 @@ This profile is intentionally thin.
 Notes:
 
 - Keep `provider` and `model` explicit in params for cap enforcement, policy evaluation, and audit.
-- `provider_profile_id` ties the request to a profile-defined default/constraints bundle.
+- `provider_profile_id` is an optional audit/correlation field in core `sys/*` and is not interpreted as an SDK-specific type.
 - `runtime` groups execution fields cleanly and avoids endless top-level field growth.
 - `provider`, `model`, and `provider_profile_id` are sourced from immutable active run config.
+- `reasoning_effort` in `sys/*` must remain agent-agnostic (for example text enum string), with SDK-level typing mapped before effect emission.
 - Optional tuning controls (`runtime.reasoning_effort`, `runtime.max_tokens`) are sourced from active run config when set; when unset, adapter leaves them unset so provider defaults apply.
 
 ### LLM Receipt (replaced `@1`)
@@ -265,6 +289,12 @@ Notes:
 ```
 
 ## Normalized Output Envelope (`output_ref`)
+
+`output_ref` contract ownership is intentionally split:
+
+1. Core `sys/LlmGenerateReceipt@1.output_ref` remains an adapter-produced hash ref.
+2. SDK requires that blob to validate as `aos.agent/LlmOutputEnvelope@1` for SDK-managed flows.
+3. Non-SDK worlds may use a different payload shape while still satisfying core `sys/*` receipt semantics.
 
 `output_ref` must point to a provider-agnostic typed envelope in CAS, sufficient for reducers to parse tool calls without provider-specific branching.
 
@@ -392,7 +422,7 @@ Run-start resolution order:
 
 Step materialization rule:
 
-- Config-bearing fields (`provider_profile_id`, `provider`, `model`, `runtime.reasoning_effort`, `runtime.max_tokens`) must come from immutable `active_run_config`.
+- Config-bearing fields (`provider`, `model`, `runtime.reasoning_effort`, `runtime.max_tokens`, and optional `provider_profile_id` audit tag) must come from immutable `active_run_config`.
 - Step-local runtime fields may vary only from deterministic reducer/plan logic for that step.
 
 Optional tuning controls rule:
@@ -435,9 +465,11 @@ Provider-specific behavior belongs in profile and adapter layers; reducer-facing
 ## Deliverables
 
 1. Profile schemas and profile-catalog reducer helpers in `aos-agent-sdk`.
-2. Updated built-in schema set replacing `LlmGenerateParams@1` and `LlmGenerateReceipt@1`.
-3. `aos-host` LLM adapter updates to consume/pass expanded fields into `aos-llm`.
-4. Manifest/cap/policy updates aligned to the in-place schema replacement, including routing for profile lookup request/result events.
+2. SDK AIR cleanup removing SDK ownership of `sys/Llm*` schema defs.
+3. Updated core built-in schema set replacing `LlmGenerateParams@1` and `LlmGenerateReceipt@1`.
+4. `aos-effects` + `aos-host` + cap enforcers/kernel updates aligned to the in-place core schema replacement.
+5. SDK mapper helpers from `aos.agent/*` run/step state into core `sys/LlmGenerateParams@1`.
+6. Manifest/cap/policy updates aligned to profile lookup request/result events.
 
 ## Exit Criteria
 
@@ -446,5 +478,6 @@ Provider-specific behavior belongs in profile and adapter layers; reducer-facing
 3. `provider_options_ref` round-trip is verified from effect params to provider request.
 4. `output_ref` normalized envelope and `raw_output_ref` provider payload are both populated where available.
 5. `max_tokens` omitted path is covered and succeeds for supported models/providers.
-6. Replay parity preserved (no nondeterministic fields leak into reducer decisions).
-7. Unknown `provider_profile_id` path produces deterministic `ProfileLookupFailed@1` and run failure with no partial run activation.
+6. Core `sys/*` ownership is preserved: no SDK AIR asset defines `sys/Llm*` schemas.
+7. Replay parity preserved (no nondeterministic fields leak into reducer decisions).
+8. Unknown `provider_profile_id` path produces deterministic `ProfileLookupFailed@1` and run failure with no partial run activation.
