--- a/roadmap/v0.10-agent-sdk/p2.6-conformance-and-demiurge-migration.md
+++ b/roadmap/v0.10-agent-sdk/p2.6-conformance-and-demiurge-migration.md
@@ -25,7 +25,8 @@ This stage resolves concerns #8 and #9.
      - adapter timeout/error,
      - parent/child session lifecycle,
      - unknown provider profile id,
-     - profile change across runs with no in-run drift.
+     - profile change across runs with no in-run drift,
+     - boundary ownership guard (no SDK-local `sys/Llm*` schema definitions).
 2. Add replay-oriented end-to-end assertions:
    - journal replay from genesis,
    - byte-identical terminal state snapshots.
@@ -68,3 +69,4 @@ This stage resolves concerns #8 and #9.
 6. `aos-smoke` deterministic lane is green in CI; live-provider lane is available and documented as opt-in.
 7. Unknown `provider_profile_id` deterministically fails run start through typed lookup-failure path (no partial run activation).
 8. Profile updates only affect subsequent runs; active runs keep immutable `active_run_config` values through completion/cancel.
+9. Repository-level conformance checks confirm `sys/Llm*` ownership remains in core crates and spec assets, not in SDK AIR assets.
