--- a/roadmap/v0.10-agent-sdk/p2.2-provider-profiles-llm-contract.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-provider-profiles-llm-contract.md
@@ -12,7 +12,6 @@ Completed scaffold work:
    - `aos.agent/ProviderProfile@1`
    - `aos.agent/LlmToolCall@1`
    - `aos.agent/LlmToolCallList@1`
-   - `aos.agent/LlmOutputEnvelope@1`
    - profile lookup contracts:
      - `aos.agent/ProfileLookupRequested@1`
      - `aos.agent/ProfileLookupResolved@1`
@@ -145,7 +144,7 @@ Determinism boundary:
 With profile-first run-scoped configuration, nesting keeps contracts clearer:
 
 - top-level in `LlmGenerateParams@1`:
-  - identity and determinism-critical routing/audit fields (`provider_profile_id`, `provider`, `model`, `message_refs`, `api_key`)
+  - identity and determinism-critical routing/audit fields (`correlation_id`, `provider_profile_id`, `provider`, `model`, `message_refs`, `api_key`)
 - nested `runtime`:
   - execution payload that combines:
     - run-pinned optional controls (`max_tokens`, `reasoning_effort`) copied from immutable `active_run_config`
@@ -228,6 +227,7 @@ This profile is intentionally thin.
   "name": "sys/LlmGenerateParams@1",
   "type": {
     "record": {
+      "correlation_id": { "option": { "text": {} } },
       "provider_profile_id": { "option": { "text": {} } },
       "provider": { "text": {} },
       "model": { "text": {} },
@@ -243,6 +243,7 @@ Notes:
 
 - Keep `provider` and `model` explicit in params for cap enforcement, policy evaluation, and audit.
 - `provider_profile_id` is an optional audit/correlation field in core `sys/*` and is not interpreted as an SDK-specific type.
+- `correlation_id` is an optional agent-agnostic tracing field for out-of-band telemetry correlation.
 - `runtime` groups execution fields cleanly and avoids endless top-level field growth.
 - `provider`, `model`, and `provider_profile_id` are sourced from immutable active run config.
 - `reasoning_effort` in `sys/*` must remain agent-agnostic (for example text enum string), with SDK-level typing mapped before effect emission.
@@ -293,8 +294,8 @@ Notes:
 `output_ref` contract ownership is intentionally split:
 
 1. Core `sys/LlmGenerateReceipt@1.output_ref` remains an adapter-produced hash ref.
-2. SDK requires that blob to validate as `aos.agent/LlmOutputEnvelope@1` for SDK-managed flows.
-3. Non-SDK worlds may use a different payload shape while still satisfying core `sys/*` receipt semantics.
+2. SDK-managed flows should treat that blob as `sys/LlmOutputEnvelope@1`.
+3. Non-SDK worlds may still consume the same core envelope without any `aos.agent/*` dependency.
 
 `output_ref` must point to a provider-agnostic typed envelope in CAS, sufficient for reducers to parse tool calls without provider-specific branching.
 
@@ -303,7 +304,7 @@ Canonical tool-call schema:
 ```json
 {
   "$kind": "defschema",
-  "name": "aos.agent/LlmToolCall@1",
+  "name": "sys/LlmToolCall@1",
   "type": {
     "record": {
       "call_id": { "text": {} },
@@ -318,8 +319,8 @@ Canonical tool-call schema:
 ```json
 {
   "$kind": "defschema",
-  "name": "aos.agent/LlmToolCallList@1",
-  "type": { "list": { "ref": "aos.agent/LlmToolCall@1" } }
+  "name": "sys/LlmToolCallList@1",
+  "type": { "list": { "ref": "sys/LlmToolCall@1" } }
 }
 ```
 
@@ -330,7 +331,7 @@ Envelope schema:
 ```json
 {
   "$kind": "defschema",
-  "name": "aos.agent/LlmOutputEnvelope@1",
+  "name": "sys/LlmOutputEnvelope@1",
   "type": {
     "record": {
       "assistant_text": { "option": { "text": {} } },
@@ -342,7 +343,7 @@ Envelope schema:
 ```
 
 When `tool_calls_ref` is present, the referenced CAS payload must validate as
-`aos.agent/LlmToolCallList@1`.
+`sys/LlmToolCallList@1`.
 
 Parallel tool intent normalization:
 
@@ -423,6 +424,7 @@ Run-start resolution order:
 Step materialization rule:
 
 - Config-bearing fields (`provider`, `model`, `runtime.reasoning_effort`, `runtime.max_tokens`, and optional `provider_profile_id` audit tag) must come from immutable `active_run_config`.
+- `correlation_id` should be materialized deterministically from run/turn/step context for tracing (or left unset).
 - Step-local runtime fields may vary only from deterministic reducer/plan logic for that step.
 
 Optional tuning controls rule:
